# arrow

./: .coverage  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  HISTORY.md  HISTORY.rst  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  REQUIREMENTS.txt  appveyor.yml  genindex.html  index.html  isort.cfg  junit.xml  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  requirements26.txt  requirements27.txt  requirements33.txt  search.html  searchindex.js  setup.cfg  setup.py  t_parser.py  test.py  to do ZhangQingsen.txt  tox.ini
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  (+1 more)
_sources/: index.txt
_themes/: README.html
arrow/: __init__.py  __init__.pyi  _version.py  _version.pyi  api.py  api.pyi  arrow.py  arrow.pyi  compat26.py  const.py  constants.py  constants.pyi  factory.py  factory.pyi  factory.pyx  formats.py  formatter.py  formatter.pyi  locales.py  locales.pyi  my test.py  parser.c  parser.py  parser.pyi  parser.pyx  timezone.py  util.py  util.pyi  version.py
contributors/: kosuke316.md
docs/: Makefile  api-guide.rst  conf.py  getting-started.rst  guide.rst  index.rst  releases.rst
requirements/: requirements-docs.txt  requirements-tests.txt  requirements.txt
scripts/: tests
tests/: api_tests.py  api_tests.py.bak  arrow_test.py  arrow_tests.py  compat26_tests.py  conftest.py  dehumanize_my_test.py  factory_tests.py  formatter_tests.py  formatter_tests.py.bak  locales_tests.py  parser_tests.py  test_api.py  test_arrow.py  test_factory.py  test_formatter.py  test_locales.py  test_parser.py  test_util.py  timezone_tests.py  util_tests.py  util_tests.py.bak  utils.py
(+12 files in other folders)
